--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,6 @@
     box-sizing: border-box;
 }
 
-:root {
-    --color-bg: #2c2c32;
-    --color-active: #0f7dc6;
-}
-
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
@@ -17,7 +12,7 @@ body {
 }
 
 header {
-    background-color: var(--color-bg);
+    background-color: #2c2c32;
     padding: 2rem 0;
     text-align: center;
 }
@@ -50,13 +45,13 @@ main {
 
 main a {
     text-decoration: none;
-    color: var(--color-bg);
+    color: #2c2c32;
 }
 main a:hover {
     text-decoration: underline;
 }
 
 .active {
-    color: var(--color-active);
+    color:  #0f7dc6;
     cursor: default;
 }
